# AudioClient

./: .gitignore  README.md  main.py  pyproject.toml  resource.qrc  resource_rc.py
docs/: ExePacking.iss  build.bat
src/: constants.py
src/config/: config_loader.py
src/core/: __init__.py  audio_handler.py  fsuipc_client.py  network_handler.py  voice_client.py
src/core/codecs/: opus_decoder.py  opus_encoder.py
src/model/: __init__.py  voice_models.py
src/signal/: __init__.py  audio_signal.py  keyboard_signal.py  mouse_signal.py  signals.py
src/thread/: __init__.py  keyboard_listener.py  mouse_listener.py
src/ui/: client_window.py  config_window.py  connect_window.py  controller_window.py  loading_window.py  login_window.py  main_window.py
src/ui/component/: __init__.py  hotkey_button.py  indicator_button.py  loading_spinner.py  ptt_button.py  selected_button.py
src/ui/form/: __init__.py  config_window.ui  connect_window.ui  controller_window.ui  loading_window.ui  login_window.ui  main_window.ui  pilot_window.ui
src/ui/form/generate/: config_window.py  connect_window.py  controller_window.py  loading_window.py  login_window.py  main_window.py  pilot_window.py
src/utils/: __init__.py  audio_utils.py  http_client_manager.py  logger.py  qss_loader.py  utils.py  version.py  widget_utils.py
style/: style.qss
