[project]
name = "AudioClient"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Half_nothing", email = "Half_nothing@163.com"},
]
dependencies = ["async-event-bus>=0.4.0", "pyside6>=6.10.0", "qt6-applications>=6.5.0.2.3", "qt6-tools>=6.5.0.1.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
